# bedrock

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  edge_case_test
crates/bedrock-forge/: Cargo.toml  README.md
crates/bedrock-forge/benches/: relay_bench.rs
crates/bedrock-forge/docs/: fibre-zcash-planning.md  testing.md
crates/bedrock-forge/docs/plans/: 2026-01-27-fiber-sidecar.md  2026-01-27-fibre-zcash-phase1.md  2026-01-27-fibre-zcash-phase2.md  2026-01-27-phase2-udp-fec-design.md  2026-01-27-phase3-relay-network.md  2026-01-27-phase4-production-hardening.md  2026-01-27-testing-plan.md
crates/bedrock-forge/fuzz/: Cargo.toml
crates/bedrock-forge/fuzz/fuzz_targets/: fuzz_chunk.rs  fuzz_chunk_header.rs  fuzz_roundtrip_chunk.rs
crates/bedrock-forge/src/: builder.rs  error.rs  lib.rs  mempool.rs  messages.rs  reconstructor.rs
crates/bedrock-forge/src/fec/: error.rs  mod.rs
crates/bedrock-forge/src/relay/: client.rs  node.rs
crates/bedrock-forge/src/transport/: chunk.rs  chunker.rs  config.rs  mod.rs  session.rs
crates/bedrock-forge/src/types/: block.rs  mod.rs
crates/bedrock-forge/tests/: bip152_compat.rs  e2e_test.rs  fec_integration.rs  generate_corpus.rs  harness_test.rs  integration.rs  relay_integration.rs
crates/bedrock-forge/tests/e2e/: pipeline.rs
crates/bedrock-forge/tests/fixtures/: blocks.rs
crates/bedrock-forge/tests/harness/: mod.rs  network.rs
crates/bedrock-forge/tests/predeploy/: checklist.rs  mod.rs
crates/bedrock-forge/tests/stress/: chaos.rs  mod.rs
crates/bedrock-noise/: Cargo.toml  README.md
crates/bedrock-noise/benches/: transport_bench.rs
crates/bedrock-noise/fuzz/: Cargo.toml
crates/bedrock-noise/fuzz/fuzz_targets/: fuzz_handshake_message.rs  fuzz_key_parsing.rs  fuzz_private_key_roundtrip.rs
crates/bedrock-noise/src/: handshake.rs  lib.rs  transport.rs
crates/bedrock-noise/tests/: integration_tests.rs  noise_test_vectors.rs
crates/fiber-sidecar/: Cargo.toml
crates/fiber-sidecar/src/: compact.rs  relay.rs
crates/fiber-zcash/: Cargo.toml  README.md
crates/fiber-zcash/benches/: relay_bench.rs
crates/fiber-zcash/docs/: fibre-zcash-planning.md
crates/fiber-zcash/docs/plans/: 2026-01-27-fibre-zcash-phase1.md  2026-01-27-phase3-relay-network.md  2026-01-27-phase4-production-hardening.md
crates/fiber-zcash/fiber-sidecar/: config.example.toml
crates/fiber-zcash/fiber-sidecar/src/: config.rs  poller.rs
crates/fiber-zcash/scripts/: run_tests.sh
crates/fiber-zcash/src/: compact_block.rs  error.rs  lib.rs
crates/fiber-zcash/src/fec/: decoder.rs
crates/fiber-zcash/src/relay/: client.rs  metrics.rs  mod.rs
crates/fiber-zcash/src/transport/: chunk.rs  chunker.rs  pow.rs  session.rs
crates/fiber-zcash/src/types/: txid.rs
crates/fiber-zcash/tests/: fixtures_test.rs  integration.rs  stress_test.rs
crates/forge-sidecar/: Cargo.toml  README.md  config.example.toml
crates/forge-sidecar/fuzz/: Cargo.toml
crates/forge-sidecar/fuzz/fuzz_targets/: fuzz_build_header.rs  (+2 more)
crates/forge-sidecar/src/: compact.rs  config.rs  lib.rs  main.rs  poller.rs  relay.rs  rpc.rs
crates/forge-sidecar/tests/: integration_test.rs
crates/zcash-equihash-validator/: Cargo.toml  README.md
crates/zcash-equihash-validator/examples/: validate_share.rs
crates/zcash-equihash-validator/fuzz/: Cargo.toml
crates/zcash-equihash-validator/src/: difficulty.rs  error.rs  lib.rs  validator.rs  vardiff.rs
crates/zcash-equihash-validator/tests/: difficulty_proptest.rs  integration_tests.rs  test_vectors.rs  validator_tests.rs  vardiff_proptest.rs  vardiff_tests.rs
crates/zcash-jd-client/: Cargo.toml  README.md
crates/zcash-jd-client/src/: block_submitter.rs  client.rs  config.rs  error.rs  full_template.rs  lib.rs  main.rs  template_builder.rs
crates/zcash-jd-client/tests/: integration_tests.rs
crates/zcash-jd-server/: Cargo.toml  README.md
crates/zcash-jd-server/fuzz/: Cargo.toml
crates/zcash-jd-server/src/: codec.rs  config.rs  error.rs  lib.rs  messages.rs  server.rs  token.rs  validation.rs
crates/zcash-jd-server/tests/: full_template_tests.rs  generate_corpus.rs  integration_tests.rs
crates/zcash-mining-protocol/: Cargo.toml  README.md
crates/zcash-mining-protocol/fuzz/: Cargo.toml
crates/zcash-mining-protocol/src/: codec.rs  error.rs  lib.rs  messages.rs
crates/zcash-mining-protocol/tests/: codec_proptest.rs  codec_tests.rs  generate_corpus.rs  message_tests.rs
crates/zcash-pool-common/fuzz/: Cargo.toml
crates/zcash-pool-server/: Cargo.toml  README.md
crates/zcash-pool-server/benches/: payout_bench.rs  share_bench.rs
crates/zcash-pool-server/examples/: run_pool.rs
crates/zcash-pool-server/fuzz/: Cargo.toml
crates/zcash-pool-server/src/: channel.rs  config.rs  duplicate.rs  error.rs  fiber.rs  forge.rs  job.rs  lib.rs  payout.rs  ratelimit.rs  reconnect.rs  security.rs  server.rs  session.rs  share.rs
crates/zcash-pool-server/tests/: block_submission_path.rs  concurrent_stress.rs  e2e_mining_flow.rs  fiber_integration_test.rs  forge_integration_test.rs  integration_tests.rs  session_tests.rs
crates/zcash-stratum-noise/: Cargo.toml  README.md
crates/zcash-stratum-noise/src/: handshake.rs  keys.rs  lib.rs  transport.rs
crates/zcash-stratum-noise/tests/: integration_tests.rs
crates/zcash-stratum-observability/: Cargo.toml  README.md
crates/zcash-stratum-observability/src/: lib.rs  logging.rs  metrics.rs  tracing_setup.rs
crates/zcash-template-provider/: Cargo.toml  README.md
crates/zcash-template-provider/examples/: fetch_template.rs
crates/zcash-template-provider/fuzz/: Cargo.toml
crates/zcash-template-provider/src/: commitments.rs  error.rs  header.rs  lib.rs  nonce.rs  rpc.rs  template.rs  testutil.rs  types.rs
crates/zcash-template-provider/tests/: header_tests.rs  nonce_proptest.rs  nonce_tests.rs  provider_tests.rs  rpc_tests.rs
crates/zcash-test-miner/: Cargo.toml  Dockerfile
crates/zcash-test-miner/src/: main.rs  protocol.rs  transport.rs  worker.rs
fiber-sidecar/: Cargo.toml  README.md
fiber-sidecar/src/: main.rs
fiber-sidecar/tests/: integration_test.rs
(+151 files in other folders)
