[package]
name = "fiber-sidecar"
version = "0.1.0"
edition = "2021"
description = "Fiber relay sidecar for Stratum V1 mining pools"
license = "MIT OR Apache-2.0"

[[bin]]
name = "fiber-sidecar"
path = "src/main.rs"

[dependencies]
fiber-zcash = { path = ".." }
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
hex = "0.4"
sha2 = "0.10"
toml = "0.8"

# Zebra RPC client
jsonrpsee = { version = "0.24", features = ["http-client"] }

[dev-dependencies]
tempfile = "3"
