[package]
name = "bedrock-noise"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Noise Protocol encryption for Bedrock mining infrastructure"

[dependencies]
snow = "0.9"
thiserror.workspace = true
tracing.workspace = true
rand = "0.8"
hex.workspace = true
x25519-dalek = { version = "2.0", features = ["static_secrets"] }
tokio = { workspace = true, features = ["net", "io-util"] }
zeroize = { version = "1", features = ["derive"] }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros", "rt-multi-thread"] }
