[package]
name = "fiber-zcash"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Low-latency block relay network for Zcash"
repository = "https://github.com/iqlusioninc/stratum-zcash"

[dependencies]
thiserror = { workspace = true }
hex = { workspace = true }
siphasher = "1.0"
reed-solomon-erasure = "6.0"
tokio = { workspace = true, features = ["net", "rt-multi-thread", "macros", "time", "sync"] }
hmac = "0.12"
sha2 = { workspace = true }
bytes = "1.5"
subtle = "2.5"
tracing = { workspace = true }
equihash = { workspace = true }

[dev-dependencies]
proptest = "1.4"
tokio-test = "0.4"
rand = "0.8"
criterion = { version = "0.5", features = ["async_tokio"] }

[[bench]]
name = "relay_bench"
harness = false
