[package]
name = "forge-sidecar"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "FORGE relay sidecar for Stratum V1 mining pools (part of the Bedrock initiative)"

[[bin]]
name = "forge-sidecar"
path = "src/main.rs"

[lib]
name = "forge_sidecar"
path = "src/lib.rs"

[dependencies]
bedrock-forge = { path = "../bedrock-forge" }
tokio = { workspace = true, features = ["full"] }
clap = { version = "4", features = ["derive"] }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
hex = { workspace = true }
sha2 = { workspace = true }
toml = "0.8"

# Zebra RPC client
jsonrpsee = { version = "0.24", features = ["http-client"] }

[dev-dependencies]
tempfile = "3"
