[package]
name = "zcash-equihash-validator"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Equihash solution validation and difficulty management for Zcash mining"

[dependencies]
equihash = { workspace = true }
thiserror.workspace = true
tracing.workspace = true
tokio.workspace = true
blake2b_simd.workspace = true

# Local dependencies
zcash-pool-common = { path = "../zcash-pool-common" }

[dev-dependencies]
zcash-mining-protocol = { path = "../zcash-mining-protocol" }
zcash-template-provider = { path = "../zcash-template-provider" }
tokio = { workspace = true, features = ["test-util", "macros", "rt-multi-thread"] }
hex.workspace = true
tracing-subscriber.workspace = true
