[package]
name = "zcash-jd-server"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Job Declaration Server for Zcash Stratum V2"

[dependencies]
tokio = { workspace = true, features = ["full"] }
thiserror.workspace = true
tracing.workspace = true
serde.workspace = true
byteorder.workspace = true
hex.workspace = true

# Local dependencies
zcash-mining-protocol = { path = "../zcash-mining-protocol" }
zcash-pool-common = { path = "../zcash-pool-common" }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros", "rt-multi-thread"] }
