[package]
name = "zcash-mining-protocol"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Zcash Mining Protocol messages for Stratum V2"

[dependencies]
serde.workspace = true
thiserror.workspace = true
byteorder.workspace = true
arbitrary = { version = "1", features = ["derive"], optional = true }

[features]
arbitrary = ["dep:arbitrary"]

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
proptest = "1.4"
