[package]
name = "zcash-pool-server"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Stratum V2 pool server for Zcash Equihash mining"

[dependencies]
tokio = { workspace = true, features = ["full"] }
thiserror.workspace = true
tracing.workspace = true
serde.workspace = true
rustc-hash = "2.0"

# Local dependencies
zcash-template-provider = { path = "../zcash-template-provider" }
zcash-mining-protocol = { path = "../zcash-mining-protocol" }
zcash-equihash-validator = { path = "../zcash-equihash-validator" }
zcash-pool-common = { path = "../zcash-pool-common" }
zcash-jd-server = { path = "../zcash-jd-server" }
zcash-stratum-noise = { path = "../zcash-stratum-noise" }
zcash-stratum-observability = { path = "../zcash-stratum-observability" }
byteorder.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros", "rt-multi-thread"] }
tracing-subscriber.workspace = true
