[package]
name = "zcash-pool-server"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Stratum V2 pool server for Zcash Equihash mining"

[dependencies]
tokio = { workspace = true, features = ["full"] }
thiserror.workspace = true
tracing.workspace = true
serde.workspace = true
rustc-hash = "2.0"

# Local dependencies
zcash-template-provider = { path = "../zcash-template-provider" }
zcash-mining-protocol = { path = "../zcash-mining-protocol" }
zcash-equihash-validator = { path = "../zcash-equihash-validator" }
zcash-pool-common = { path = "../zcash-pool-common" }
zcash-jd-server = { path = "../zcash-jd-server" }
bedrock-noise = { path = "../bedrock-noise" }
bedrock-strata = { path = "../bedrock-strata" }
bedrock-forge = { path = "../bedrock-forge", optional = true }
blake2b_simd.workspace = true
byteorder.workspace = true
hex.workspace = true
rand = "0.8"
sha2.workspace = true

[features]
default = ["forge"]
forge = ["dep:bedrock-forge"]

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros", "rt-multi-thread"] }
tracing-subscriber.workspace = true
