[package]
name = "zcash-stratum-noise"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Noise Protocol encryption for Zcash Stratum V2"

[dependencies]
snow = "0.9"
thiserror.workspace = true
tracing.workspace = true
rand = "0.8"
hex.workspace = true
x25519-dalek = { version = "2.0", features = ["static_secrets"] }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros", "rt-multi-thread"] }
