[package]
name = "zcash-template-provider"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Zcash Template Provider for Stratum V2"

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
hex.workspace = true
blake2b_simd.workspace = true
reqwest = { version = "0.11", features = ["json"] }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
tracing-subscriber.workspace = true
